CHANGES IN VERSION 1.1.11
------------------------
 o better add_legend implementation. <2015-07-30, Thu>
 o add ... in theme_tree & theme_tree2 for accepting additional parameter. <2015-07-30, Thu>
 o better geom_tree implementation. Now we can scale the tree with aes(color=numVar). <2015-07-30, Thu>
 
CHANGES IN VERSION 1.1.10
------------------------
 o solve overlapping branches for layout = "fan" || "radial",
   that are coord_polar-ized layouts.
   see https://github.com/GuangchuangYu/ggtree/issues/6,
   contributed by Vincent Bonhomme. <2015-07-22, Wed>

CHANGES IN VERSION 1.1.9
------------------------
 o update add_legend to align legend text <2015-07-06, Mon>
 o bug fixed in internal function, getChild.df, which should not include root node if selected node is root <2015-07-01, Wed>
 o rotate function for ratating a clade by 180 degree and update vignette <2015-07-01, Wed>
 o get_taxa_name function will return taxa name vector of a selected clade <2015-06-30, Tue>
 o add example of flip function in vignette <2015-06-30, Tue>
 o flip function for exchanging positions of two selected branches <2015-06-30, Tue>
 
CHANGES IN VERSION 1.1.8
------------------------
 o update get.placement <2015-06-05, Fri>
 o edgeNum2nodeNum for converting edge number to node number for EPA/pplacer output <2015-06-04, Thu>
 o mv scale_x_gheatmap to scale_x_ggtree, which also support msaplot <2015-06-02, Tue>
 o add mask function <2015-06-02, Tue>
 
CHANGES IN VERSION 1.1.7
------------------------
 o add example of msaplot in vignette <2015-05-22, Fri>
 o msaplot for adding multiple sequence alignment <2015-05-22, Fri>
 
CHANGES IN VERSION 1.1.6
------------------------
 o add vertical_only parameter to scaleClade and set to TRUE by default.
   only vertical will be scaled by default. <2015-05-22, Fri>
 o update add_colorbar & add_legend <2015-05-21, Thu>
 o add example of add_legend and gheatmap in vignette <2015-05-18, Mon> 