@@ -17,6 +17,8 @@ export(.)
 export(add_colorbar)
 export(add_legend)
 export(aes)
+export(annotation_clade)
+export(annotation_clade2)
 export(as.binary)
 export(collapse)
 export(download.phylopic)
