@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.1.11
 ------------------------
+ o annotation_clade and annotation_clade2 functions. <2015-07-30, Thu>
  o better add_legend implementation. <2015-07-30, Thu>
  o add ... in theme_tree & theme_tree2 for accepting additional parameter. <2015-07-30, Thu>
  o better geom_tree implementation. Now we can scale the tree with aes(color=numVar). <2015-07-30, Thu>
